@@ -1,10 +1,4 @@
 instantiate {
-<% if @keep_defaults -%>
-  exec
-  expr
-  expiration
-  logintime
-<% end -%>
 <% if @content
    @content.each_line do |t_content_ln| -%>
   <%= t_content_ln.strip %>
